--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <div id="qr-reader" width="600px"></div>
-    <div id="result" className="result">New Version</div>
+    <div id="result" className="result">New Version 0.2</div>
 
     <script defer>
       const ICCID_MSISDN_MAP = {
